try to fix header jumping

--- a/my-finance-app/src/app/app.component.css
+++ b/my-finance-app/src/app/app.component.css
@@ -1,13 +1,3 @@
-.header {
-  position: sticky;
-  top: 0;
-  padding: 15px;
-  /*max-width: 320px;*/
-  margin: auto;
-  box-sizing: border-box;
-  background-color: #25A779;
-}
-
 .btn-add {
   position: fixed;
   bottom: 20px;
@@ -32,10 +22,6 @@
   left: 0;
   height: 100%;
   width: 100%;
-}
-
-.main {
-  overflow: hidden;
 }
 
 @media only screen and (min-width: 600px) {
