--- a/my-finance-app/src/app/components/header/header.component.css
+++ b/my-finance-app/src/app/components/header/header.component.css
@@ -1,12 +1,14 @@
 .header {
+  position: sticky;
+  top: 0;
+  padding: 15px;
+  margin: auto;
+  box-sizing: border-box;
+  background-color: #25A779;
   max-width: 1024px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: auto;
-  border-bottom: none;
-  box-sizing: border-box;
-
 }
 
 .balance, .login-user {
